# eagleio-platform-interface

./: README.md  doover_config.json  pyproject.toml
.appgen/: PHASE.md  PLAN.md
src/eagleio_platform_interface/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py
tests/: test_imports.py
