[project]
name = "eagleio-platform-interface"
version = "0.1.0"
description = "Bidirectional bridge between the Doover tag system and Eagle.io's REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=0.4.18",
]

[project.scripts]
export-config = "eagleio_platform_interface.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[tool.uv.sources]
pydoover = { git = "https://github.com/getdoover/pydoover", rev = "doover-2" }
